# dbstorage

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  data.h  heapfile.c  heapfile.h  page.c  page.h
test/: CMakeLists.txt  insertTest.cc
